# fresh-air

./: .gitignore  .secrets.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  settings.yaml
.github/workflows/: deploy_to_prefect_and_cloud_run.yml
fresh_air/: config.py
fresh_air/data/blocks/: dev.py
fresh_air/data/connections/: __init__.py  openaq.py
fresh_air/data/flows/: _utils.py  tasks.py
fresh_air/data/flows/eea_aqd/: _utils.py
fresh_air/data/flows/eea_aqd/measurements/: deploy.py  load.py  merge.sql  table.py
fresh_air/data/flows/eea_aqd/metadata/: deploy.py  load.py  table.py
fresh_air/data/flows/gfs/default_points/: deploy.py  load.py  table.py
fresh_air/data/flows/gfs/forecasts/: deploy.py  load.py  table.py
fresh_air/data/flows/openaq/locations/: __init__.py  loader.py
fresh_air/data/flows/openaq/measurements/: loader.py  table.py
fresh_air/data/storage/: __init__.py  base.py  bigquery.py  local.py  meta.py
fresh_air/data/storage/file/: __init__.py  _lock.py  avro.py  base.py  json.py
mlflow/: Dockerfile  run_server.sh  service.yaml
turbiner/: _logging.py  config.py
turbiner/data/connections/: __init__.py  openaq.py
turbiner/data/flows/: tasks.py
turbiner/data/flows/openaq/locations/: __init__.py  loader.py
turbiner/data/flows/openaq/measurements/: loader.py  table.py
turbiner/data/storage/: __init__.py  base.py  bigquery.py  local.py
